fixed image z-index on home css

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,5 +1,5 @@
 * {
-	/* border: 1px red dotted; */
+	border: 1px red dotted;
 }
 
 .Home-contents {
@@ -20,12 +20,14 @@
 }
 
 .featuredpic_container {
-	z-index: -2;
+	z-index: -99;
+	overflow: hidden;
 }
 
 .featuredpic_container img {
 	width: 45vh;
-	transform: scale(1.5);
+	transform: scale(1.3);
+	z-index: -99;
 }
 
 .fireproshield img {
@@ -34,6 +36,7 @@
 	height: auto;
 	object-fit: cover;
 	margin: 0px;
+	z-index: -99;
 }
 
 .home-title,
